# routes/index.js
@@ -1,8 +1,7 @@
 const passport = require('passport');
 const router = require('express').Router();
 
-router.get('/login', passport.authenticate('github'), (req, res) => {
-});
+router.get('/login', passport.authenticate('github'), (req, res) => {});
 
 router.get('/logout', function(req, res, next) {
     req.logout(function(err) {
@@ -10,18 +9,13 @@ router.get('/logout', function(req, res, next) {
         res.redirect('/');
     });
 });
-
-
 router.use('/', require('./swagger'));
-
-
-router.get('/', (req, res) => { 
-   
-    res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")
+router.get('/', (req, res) => {
+    res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out");
 });
-router.use('/users', require('./users'));
+router.use('/barbers', require('./barbers'));
 router.use('/products', require('./products'));
-router.use('/orders', require('./orders'));
+router.use('/appointments', require('./appointments'));
 router.use('/reviews', require('./reviews'));
 router.use('/contacts', require('./contacts'));
 
